fixed overflow

--- a/pt-js-project-3/css/styles.css
+++ b/pt-js-project-3/css/styles.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   background: url('../img/2.jpg') #e1e1e1;
   font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden;
 
 }
 h1 {
